[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/fonts/Game_Time.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/sprites/ui/Selection ARrow.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/ui/topbottom.png" type="Texture" id=3]
[ext_resource path="res://src/combat/interface/circular_menu/ActionMenu.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 48
extra_spacing_top = -7
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = null
VScrollBar/styles/grabber_highlight = null
VScrollBar/styles/grabber_pressed = null
VScrollBar/styles/scroll = null
VScrollBar/styles/scroll_focus = null

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.294118, 0.521569, 0.2, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="Animation" id=4]
resource_name = "Animate"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Arrow:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2.245, 0 ), Vector2( -5.17275, 0 ), Vector2( 2.245, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.364706, 0.596078, 0.290196, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="Animation" id=11]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Control/Up:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -56, -15 ), Vector2( -56, -30 ), Vector2( -56, -15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control2/Down:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 56, 15 ), Vector2( 56, 30 ), Vector2( 56, 15 ) ]
}

[node name="ActionMenu" type="HBoxContainer"]
margin_right = 540.0
margin_bottom = 276.0
theme = SubResource( 2 )
custom_constants/separation = -4
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 50.0
margin_bottom = 276.0
rect_min_size = Vector2( 50, 0 )
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowContainer" type="Control" parent="Panel"]
margin_left = 17.1091
margin_top = 29.0518
margin_right = 57.1091
margin_bottom = 69.0518
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow" type="TextureRect" parent="Panel/ArrowContainer"]
margin_left = -5.17275
margin_right = 17.8272
margin_bottom = 44.0
grow_horizontal = 0
rect_min_size = Vector2( -50, 0 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel/ArrowContainer"]
anims/Animate = SubResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 46.0
margin_right = 540.0
margin_bottom = 276.0
size_flags_horizontal = 3
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_bottom = 15

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_top = 15.0
margin_right = 479.0
margin_bottom = 261.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 476.0
margin_bottom = 243.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 463.0
margin_bottom = 230.0
follow_focus = true
scroll_horizontal_enabled = false

[node name="Actions" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/ScrollContainer"]
margin_right = 453.0
size_flags_horizontal = 3
custom_constants/separation = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OverflowArrows" type="Control" parent="MarginContainer/PanelContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 476.0
margin_bottom = 243.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/PanelContainer/OverflowArrows"]
autoplay = "Animate"
anims/Animate = SubResource( 11 )

[node name="Control" type="Control" parent="MarginContainer/PanelContainer/OverflowArrows"]
anchor_left = 0.5
anchor_right = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Up" type="TextureRect" parent="MarginContainer/PanelContainer/OverflowArrows/Control"]
margin_left = -56.0
margin_top = -21.0
margin_right = 168.0
margin_bottom = 32.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="MarginContainer/PanelContainer/OverflowArrows"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Down" type="TextureRect" parent="MarginContainer/PanelContainer/OverflowArrows/Control2"]
margin_left = 56.0
margin_top = 21.0
margin_right = 280.0
margin_bottom = 74.0007
rect_rotation = 180.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
